<resources>
    <string name="app_name">My Hospital</string>
    <!--<string name="login">Login Again</string>-->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_menu_evaluate">评价</string>
    <string name="tab_menu_department">科室</string>
    <string name="tab_menu_award">表彰</string>
    <string name="tab_menu_homepage">主页</string>
    <string name="tab_type_all">全部</string>
    <string name="tab_type_flag">表彰锦旗</string>
    <string name="tab_type_lett">表扬信</string>
    <string name="tab_type_redbag">拒收红包</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="loginin">登录</string>
    <string name="signin">注册并登陆</string>
    <string name="exemple">在这里显示你的信息</string>
    <string name="commit">提交</string>
    <string name="cancel">放弃</string>
    <string name="resign">注册</string>
    <string name="acconttips">输入账号</string>
    <string name="pwdtip">输入密码</string>
    <string name="resign_login">注册并登录</string>
    <string name="look_evaluation">查看我的评价</string>
    <string name="self_evaluation">自我评价</string>
    <string name="evaluation_others">评价他人</string>
    <string name="textview">TextView</string>
    <string-array name="test_string_array">
        <item>请选择表彰项目</item>
        <item>锦旗表彰</item>
        <item>表扬信表彰</item>
        <item>拒收红包</item>
        <item>口头表彰</item>
        <item>其他表彰</item>
    </string-array>
    <string name="action_logout">注销</string>
    <string name="title_activity_login">登录</string>
    <string name="publish">发布</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">请输入账号</string>
    <string name="submit">提交</string>
    <string name="detail">详情</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">注册并登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮件格式错误</string>
    <string name="error_invalid_password">密码大于 4 位</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">这个是必填项</string>
    <string name="title_activity_register">注册</string>
</resources>
